# portfolio-ai-chatbot

./: .env.example  .env.sample  .gitignore  CLAUDE.md  DESIGN_SYSTEM.md  FRONTEND_ARCHITECTURE.md  README.md  TRANSLATION_SUMMARY.md  docker-compose.prod.yml  docker-compose.vps.yml  docker-compose.yml  threejs_boxes_explanation.md
.claude/commands/: joke.md
backend/: Dockerfile.prod  app.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  redis.py
backend/app/pages/about/: router.py
backend/app/pages/chatbot/: router.py
backend/app/pages/home/: router.py
backend/app/pages/projects/: router.py
dev-html/: index.html
frontend/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-svelte/: LEARNING-PLAN.md  README.md  package.json
frontend-svelte/migration-guides/: 01-layout.md  02-contact-forms.md  03-projects-filtering.md  04-animations.md  05-threejs-integration.md
frontend-svelte/src/: app.css  app.html
frontend/docs/: threejs-chatbot-implementation.md
frontend/public/: index.html
frontend/src/: App.old.js  App.tsx  index.css  vite-env.d.ts
instructions/about/: README.md
instructions/chatbot/: README.md
instructions/consulting/: README.md
instructions/contact/: README.md
instructions/home/: README.md
instructions/layout/: README.md
instructions/projects/: README.md
instructions/three-background/: README.md
prd/: design-system.json  nike_red.json
ui_iterations/: chatbot.html  frontpage.html
(+81 files in other folders)
